Use String.formatted for modernizer violations
Agent-Logs-Url: https://github.com/hazendaz/htmlcompressor/sessions/96667a25-443c-48cd-b322-2c9fa2d3067b

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>